/*
 *--------1---------2---------3---------4---------5---------6---------7---------8--------
 * Copyright (c) 2018 by Vy Nguyen
 * BSD License
 *
 * @author vynguyen
 * Port the code from Ethercamp Harmony project.
 */
syntax = "proto3";
package keystore;

option java_package = "com.tvntd.crypto.proto";
option java_outer_classname = "KS";

message CipherParams {
    bytes                 iv            = 1;
}

message KdfParams {
    uint32                dklen         = 1;
    bytes                 salt          = 2;
    uint32                n             = 3;
    uint32                p             = 4;
    uint32                r             = 5;
}

message KeystoreCrypto {
    string                cipher        = 1;
    string                kdf           = 2;
    bytes                 ciphertext    = 3;
    bytes                 mac           = 4;
    CipherParams          cipherparams  = 5;
    KdfParams             kdfparams     = 6;
}

message KeystoreItem {
    uint32                version       = 1;
    KeystoreCrypto        crypto        = 3;
}
